[package]
name = "wdriver_rs"
version = "23.11.30"
edition = "2021"

[dependencies]
log = "0.4.17"
yaml-rust = "0.4"
fast_log = "1.5.51"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
napi = { version = "2.16.12", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
napi-derive = "2.16.12"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_IO",
]

[profile.test]
debug-assertions = false